# SCP-firmware

doc/: cmake_readme.md
framework/: CMakeLists.txt
module/: CMakeLists.txt
module/atu/: CMakeLists.txt
module/atu/doc/: atu.md
module/atu/include/: mod_atu.h
module/atu/include/internal/: atu.h  atu_common.h  atu_transport.h  atu_utils.h
module/atu/src/: atu_common.c  atu_delegate.c  atu_manage.c  atu_transport.c  atu_utils.c  mod_atu.c
module/atu/test/: mod_atu_unit_test.c
module/cmn_cyprus/: CMakeLists.txt  Module.cmake
module/cmn_cyprus/include/: mod_cmn_cyprus.h
module/cmn_cyprus/include/internal/: cmn_cyprus_ccg.h  cmn_cyprus_ctx.h  cmn_cyprus_discovery.h  cmn_cyprus_hnsam.h  cmn_cyprus_reg.h  cmn_cyprus_rnsam.h  cmn_cyprus_utils.h
module/cmn_cyprus/src/: cmn_cyprus_ccg.c  cmn_cyprus_discovery.c  cmn_cyprus_hnsam.c  cmn_cyprus_rnsam.c  cmn_cyprus_utils.c  mod_cmn_cyprus.c
module/dvfs_handler/: CMakeLists.txt  Module.cmake
module/dvfs_handler/include/: mod_dvfs_handler.h
module/dvfs_handler/src/: mod_dvfs_handler.c
module/mhu3/src/: mod_mhu3.c
module/pcie_enumeration/: CMakeLists.txt  Module.cmake
module/pcie_enumeration/include/: mod_pcie_enumeration.h
module/pcie_enumeration/src/: Makefile  mod_pcie_enumeration.c
module/scmi_perf/: CMakeLists.txt
module/scmi_perf/include/: mod_scmi_perf.h
module/scmi_perf/src/: mod_scmi_perf.c
module/tower_nci/: CMakeLists.txt  Module.cmake
module/tower_nci/include/: mod_tower_nci.h
module/tower_nci/src/: mod_tower_nci.c  tower_nci_reg.h
module/transport/: CMakeLists.txt
module/transport/include/: mod_transport.h
module/transport/src/: mod_transport.c
product/rdfremont/: product.mk
product/rdfremont/include/: clock_css.h
product/rdfremont/lcp_ramfw/: CMakeLists.txt  Firmware.cmake  config_transport.c
product/rdfremont/lcp_ramfw/include/: lcp_mhu3.h  lcp_mmap.h
product/rdfremont/mcp_ramfw/: CMakeLists.txt  Firmware.cmake  Toolchain-ArmClang.cmake  Toolchain-Clang.cmake  Toolchain-GNU.cmake  config_armv7m_mpu.c  config_clock.c  config_gtimer.c  config_pl011.c  config_timer.c  fmw_memory.h  fmw_notification.h
product/rdfremont/mcp_ramfw/include/: fmw_cmsis.h  fmw_cmsis_mcp.h  mcp_cfgd_timer.h  mcp_clock.h  mcp_css_mmap.h
product/rdfremont/module/mcp_platform/: CMakeLists.txt  Module.cmake
product/rdfremont/module/mcp_platform/src/: mod_mcp_platform.c
product/rdfremont/module/mod_lcp_platform/: CMakeLists.txt
product/rdfremont/module/pcie_setup/: CMakeLists.txt
product/rdfremont/module/pcie_setup/include/: mod_pcie_setup.h
product/rdfremont/module/pcie_setup/src/: mod_pcie_setup.c
product/rdfremont/module/scp_platform/: CMakeLists.txt
product/rdfremont/module/scp_platform/include/: mod_scp_platform.h
product/rdfremont/module/scp_platform/src/: mod_scp_platform.c
product/rdfremont/scp_ramfw/: CMakeLists.txt  Firmware.cmake  Toolchain-GNU.cmake  cmn_node_id.h  config_apcontext.c  config_clock.c  config_cmn_cyprus.c  config_css_clock.c  config_gtimer.c  config_pcie_setup.c  config_pik_clock.c  config_pl011.c  config_power_domain.c  config_scmi_system_power.c  config_sid.c  config_system_info.c  config_system_pll.c  config_timer.c  io_macro_layout.h
product/rdfremont/scp_ramfw/include/: fmw_cmsis.h  fmw_cmsis_scp.h  platform_core.h  scp_cfgd_mhu3.h  scp_cfgd_power_domain.h  scp_cfgd_scmi.h  scp_cfgd_timer.h  scp_clock.h  scp_css_mmap.h  scp_exp_mmap.h  system_pik.h
product/rdkronos/: product.mk
product/rdkronos/include/: fmw_io.h  lcp_platform_transport.h
product/rdkronos/lcp_ramfw/: CMakeLists.txt  Firmware.cmake  config_clock.c  config_dvfs_handler.c  config_mhu3.c  config_pl011.c  fmw_memory.h
product/rdkronos/lcp_ramfw/include/: lcp_mhu3.h
product/rdkronos/module/pcie_setup/: CMakeLists.txt  Module.cmake
product/rdkronos/module/pcie_setup/src/: mod_pcie_setup.c
product/rdkronos/module/scp_platform/: CMakeLists.txt  Module.cmake
product/rdkronos/module/scp_platform/include/: mod_scp_platform.h
product/rdkronos/module/scp_platform/src/: mod_scp_platform.c
product/rdkronos/scp_ramfw/: CMakeLists.txt  Firmware.cmake  Toolchain-ArmClang.cmake  Toolchain-Clang.cmake  cmn_node_id.h  config_armv7m_mpu.c  config_atu.c  config_clock.c  config_cmn_cyprus.c  config_css_clock.c  config_mhu3.c  config_pcie_setup.c  config_pik_clock.c  config_power_domain.c  config_ppu_v1.c  config_scmi.c  config_scmi_power_domain.c  config_sds.c  config_sid.c  config_system_pll.c  config_system_power.c  config_tower_nci.c  config_transport.c  fmw_memory.h
product/rdkronos/scp_ramfw/include/: core_manager.h  platform_core.h  scp_cfgd_sds.h  scp_cfgd_transport.h  scp_clock.h  scp_css_mmap.h  scp_exp_mmap.h  scp_fw_mmap.h  scp_pwrctrl.h
product/rdn1e1/scp_ramfw/: config_transport.c
product/rdn2/scp_ramfw/: Firmware.cmake  config_transport.c
product/rdv1mc/scp_ramfw/: config_transport.c
product/sgi575/scp_ramfw/: config_transport.c
unit_test/: CMakeLists.txt
